# solace-provision

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  clean.sh  docker-compose.yml  entrypoint.sh  maybe_start_solace.sh  mkdocker.sh  mkrelease.sh  new_tests.sh  test.sh
certs/: localhost.pem  rootCa.crt  rootCa.key
examples/: acl-pub-exception.yaml  acl-sub-exception.yaml  acl.yaml  authgroup.yaml  bridge-primary.yaml  bridge-remote-primary.yaml  bridge-remote-subscription.yaml  client-profile.yaml  client-username.yaml  config.yaml  config_solace1.yaml  config_solace2.yaml  dmr-bridge.yaml  dmr-cluster.yaml  mq.sh  queue-subscription.yaml  queue.yaml  queue1.yaml  queue10.yaml  queue11.yaml  queue12.yaml  queue13.yaml  queue14.yaml  queue15.yaml  queue16.yaml  queue17.yaml  queue18.yaml  queue19.yaml  queue2.yaml  queue20.yaml  queue21.yaml  queue22.yaml  queue23.yaml  queue24.yaml  queue25.yaml  queue26.yaml  queue27.yaml  queue28.yaml  queue29.yaml  queue3.yaml  (+80 more)
src/: args.rs  args.yaml  clientconfig.rs  clientconnection.rs  commandlineparser.rs  configure.rs  fetch.rs  helpers.rs  macros.rs  main.rs  provision.rs  provisionable.rs  save.rs  solace.rs  termination.rs  update.rs  vpn.rs
src/argparsers/: acl_argp.rs  acl_pubex_argp.rs  acl_subex_argp.rs  auth_group_argp.rs  bridge_argp.rs  client_profile_argp.rs  client_username_argp.rs  dmr_bridge_argp.rs  dmr_cluster_argp.rs  dmr_cluster_link_argp.rs  dmr_cluster_link_remote_argp.rs  mod.rs  msg_vpn_argp.rs  queue_argp.rs  queue_subscription_argp.rs  remote_bridge_argp.rs  (+3 more)
(+42 files in other folders)
